// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders when incorrect badgePermission is set 1`] = `
<Avatar
  alt="User avatar"
  badge="someIncorrectBadgePermission"
  size={48}
>
  <Avatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "hMhJiW",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 hMhJiW"
        size={48}
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-puc6xj-0",
                  "isStatic": true,
                  "lastClassName": "ctvFRB",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-puc6xj-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-puc6xj-0 ctvFRB"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="someIncorrectBadgePermission"
          className=""
          diameter={48}
          size={20.1872}
        >
          <StyledComponent
            badge="someIncorrectBadgePermission"
            className=""
            diameter={48}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-12twjj0-0",
                  "isStatic": false,
                  "lastClassName": "grktSh",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-12twjj0-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.1872}
          >
            <Badge
              badge="someIncorrectBadgePermission"
              className="Badge-sc-12twjj0-0 grktSh"
              diameter={48}
              size={20.1872}
            />
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with badge 1`] = `
<Avatar
  alt="User avatar"
  badge="admin"
  size={48}
>
  <Avatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "hMhJiW",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 hMhJiW"
        size={48}
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-puc6xj-0",
                  "isStatic": true,
                  "lastClassName": "ctvFRB",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-puc6xj-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-puc6xj-0 ctvFRB"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="admin"
          className=""
          diameter={48}
          size={20.1872}
        >
          <StyledComponent
            badge="admin"
            className=""
            diameter={48}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-12twjj0-0",
                  "isStatic": false,
                  "lastClassName": "grktSh",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-12twjj0-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.1872}
          >
            <Badge
              badge="admin"
              className="Badge-sc-12twjj0-0 grktSh"
              diameter={48}
              size={20.1872}
            >
              <span
                className="wds-avatar__badge Badge-sc-12twjj0-0 grktSh"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with default props 1`] = `
<Avatar
  alt="User avatar"
  size={48}
>
  <Avatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "hMhJiW",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 hMhJiW"
        size={48}
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-puc6xj-0",
                  "isStatic": true,
                  "lastClassName": "ctvFRB",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-puc6xj-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-puc6xj-0 ctvFRB"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with link builder 1`] = `
<Avatar
  alt="User avatar"
  linkBuilder={[Function]}
  size={48}
>
  <Avatar__Wrapper
    size={48}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "hMhJiW",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size={48}
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 hMhJiW"
        size={48}
      >
        <div>
          <DefaultAvatar
            alt="User avatar"
            borderWidth="3px"
            className=""
            title="User avatar"
          >
            <StyledComponent
              alt="User avatar"
              borderWidth="3px"
              className=""
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "DefaultAvatar-puc6xj-0",
                    "isStatic": true,
                    "lastClassName": "ctvFRB",
                    "rules": Array [
                      "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                    ],
                  },
                  "defaultProps": Object {
                    "className": "",
                  },
                  "displayName": "DefaultAvatar",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "DefaultAvatar-puc6xj-0",
                  "target": [Function],
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                  Symbol(Symbol.hasInstance): [Function],
                }
              }
              forwardedRef={null}
              title="User avatar"
            >
              <Component
                alt="User avatar"
                borderWidth="3px"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <_default
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  >
                    <div
                      alt="User avatar"
                      className="DefaultAvatar-puc6xj-0 ctvFRB"
                      title="User avatar"
                    />
                  </_default>
                </_default>
              </Component>
            </StyledComponent>
          </DefaultAvatar>
        </div>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with props 1`] = `
<Avatar
  alt="alt"
  badge="admin"
  className="class-name"
  href="href"
  size={48}
  src="src"
  title="title"
>
  <Avatar__Wrapper
    href="href"
    size={48}
    title="title"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "kHAlun",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      href="href"
      size={48}
      title="title"
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 kHAlun"
        href="href"
        size={48}
        title="title"
      >
        <Avatar__Link
          href="href"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Avatar__Link-sc-1jh7fda-0",
                  "isStatic": true,
                  "lastClassName": "itobjK",
                  "rules": Array [
                    "color:#000;height:100%;width:100%;&:hover{color:#00acac;}",
                  ],
                },
                "displayName": "Avatar__Link",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Avatar__Link-sc-1jh7fda-0",
                "target": "a",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            href="href"
          >
            <a
              className="Avatar__Link-sc-1jh7fda-0 itobjK"
              href="href"
            >
              <UserAvatar
                alt="alt"
                borderWidth="3px"
                className=""
                src="src"
                title="alt"
              >
                <StyledComponent
                  alt="alt"
                  borderWidth="3px"
                  className=""
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "UserAvatar-yszxdr-0",
                        "isStatic": false,
                        "lastClassName": "wxMeK",
                        "rules": Array [
                          "height:100%;width:100%;border-radius:50%;box-sizing:border-box;display:inline-block;border:",
                          [Function],
                          " solid #ccc;",
                        ],
                      },
                      "defaultProps": Object {
                        "className": "",
                      },
                      "displayName": "UserAvatar",
                      "foldedComponentIds": Array [],
                      "propTypes": Object {
                        "alt": [Function],
                        "borderWidth": [Function],
                        "className": [Function],
                        "title": [Function],
                      },
                      "render": [Function],
                      "styledComponentId": "UserAvatar-yszxdr-0",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  src="src"
                  title="alt"
                >
                  <Component
                    alt="alt"
                    borderWidth="3px"
                    className="UserAvatar-yszxdr-0 wxMeK"
                    src="src"
                    title="alt"
                  >
                    <img
                      alt="alt"
                      className="UserAvatar-yszxdr-0 wxMeK"
                      src="src"
                      title="alt"
                    />
                  </Component>
                </StyledComponent>
              </UserAvatar>
            </a>
          </StyledComponent>
        </Avatar__Link>
        <Badge
          badge="admin"
          className=""
          diameter={48}
          size={20.1872}
        >
          <StyledComponent
            badge="admin"
            className=""
            diameter={48}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-12twjj0-0",
                  "isStatic": false,
                  "lastClassName": "grktSh",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-12twjj0-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.1872}
          >
            <Badge
              badge="admin"
              className="Badge-sc-12twjj0-0 grktSh"
              diameter={48}
              size={20.1872}
            >
              <span
                className="wds-avatar__badge Badge-sc-12twjj0-0 grktSh"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with size >= 48px 1`] = `
<Avatar
  alt="User avatar"
  badge="admin"
  size="50"
>
  <Avatar__Wrapper
    size="50"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "jUIsOl",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="50"
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 jUIsOl"
        size="50"
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="3px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="3px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-puc6xj-0",
                  "isStatic": true,
                  "lastClassName": "ctvFRB",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-puc6xj-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="3px"
              className="DefaultAvatar-puc6xj-0 ctvFRB"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="admin"
          className=""
          diameter="50"
          size={20.695}
        >
          <StyledComponent
            badge="admin"
            className=""
            diameter="50"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-12twjj0-0",
                  "isStatic": false,
                  "lastClassName": "dCvRfU",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-12twjj0-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={20.695}
          >
            <Badge
              badge="admin"
              className="Badge-sc-12twjj0-0 dCvRfU"
              diameter="50"
              size={20.695}
            >
              <span
                className="wds-avatar__badge Badge-sc-12twjj0-0 dCvRfU"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with size >= 120px 1`] = `
<Avatar
  alt="User avatar"
  size="124"
>
  <Avatar__Wrapper
    size="124"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "cPMvcg",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="124"
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 cPMvcg"
        size="124"
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="4px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="4px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-puc6xj-0",
                  "isStatic": true,
                  "lastClassName": "ctvFRB",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-puc6xj-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="4px"
              className="DefaultAvatar-puc6xj-0 ctvFRB"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;

exports[`Avatar renders with size 30px 1`] = `
<Avatar
  alt="User avatar"
  badge="admin"
  size="30"
>
  <Avatar__Wrapper
    size="30"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Avatar__Wrapper-sc-1jh7fda-1",
            "isStatic": false,
            "lastClassName": "cOKIfC",
            "rules": Array [
              "display:inline-block;height:",
              [Function],
              ";min-width:",
              [Function],
              ";position:relative;width:",
              [Function],
              ";",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".DefaultAvatar-puc6xj-0",
              ":hover{fill:",
              [Function],
              ";}",
              ".Avatar__Link-sc-1jh7fda-0",
              " ",
              ".UserAvatar-yszxdr-0",
              ":hover{border-color:",
              [Function],
              ";}",
            ],
          },
          "displayName": "Avatar__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Avatar__Wrapper-sc-1jh7fda-1",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="30"
    >
      <div
        className="Avatar__Wrapper-sc-1jh7fda-1 cOKIfC"
        size="30"
      >
        <DefaultAvatar
          alt="User avatar"
          borderWidth="2px"
          className=""
          title="User avatar"
        >
          <StyledComponent
            alt="User avatar"
            borderWidth="2px"
            className=""
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "DefaultAvatar-puc6xj-0",
                  "isStatic": true,
                  "lastClassName": "ctvFRB",
                  "rules": Array [
                    "background-color:#fff;border-radius:50%;border:0;box-sizing:border-box;display:inline-block;fill:#ccc;height:100%;width:100%;",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "DefaultAvatar",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "DefaultAvatar-puc6xj-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            title="User avatar"
          >
            <Component
              alt="User avatar"
              borderWidth="2px"
              className="DefaultAvatar-puc6xj-0 ctvFRB"
              title="User avatar"
            >
              <_default
                alt="User avatar"
                className="DefaultAvatar-puc6xj-0 ctvFRB"
                title="User avatar"
              >
                <_default
                  alt="User avatar"
                  className="DefaultAvatar-puc6xj-0 ctvFRB"
                  title="User avatar"
                >
                  <div
                    alt="User avatar"
                    className="DefaultAvatar-puc6xj-0 ctvFRB"
                    title="User avatar"
                  />
                </_default>
              </_default>
            </Component>
          </StyledComponent>
        </DefaultAvatar>
        <Badge
          badge="admin"
          className=""
          diameter="30"
          size={15.617}
        >
          <StyledComponent
            badge="admin"
            className=""
            diameter="30"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Badge-sc-12twjj0-0",
                  "isStatic": false,
                  "lastClassName": "dQisRC",
                  "rules": Array [
                    "height:",
                    [Function],
                    ";left:",
                    [Function],
                    ";line-height:0;min-width:",
                    [Function],
                    ";position:absolute;top:",
                    [Function],
                    ";width:",
                    [Function],
                    ";",
                  ],
                },
                "defaultProps": Object {
                  "className": "",
                },
                "displayName": "Badge",
                "foldedComponentIds": Array [],
                "propTypes": Object {
                  "className": [Function],
                  "diameter": [Function],
                  "size": [Function],
                },
                "render": [Function],
                "styledComponentId": "Badge-sc-12twjj0-0",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            size={15.617}
          >
            <Badge
              badge="admin"
              className="Badge-sc-12twjj0-0 dQisRC"
              diameter="30"
              size={15.617}
            >
              <span
                className="wds-avatar__badge Badge-sc-12twjj0-0 dQisRC"
                title="Community Admin"
              >
                <_default>
                  <_default>
                    <div />
                  </_default>
                </_default>
              </span>
            </Badge>
          </StyledComponent>
        </Badge>
      </div>
    </StyledComponent>
  </Avatar__Wrapper>
</Avatar>
`;
